--- a/neo_dolfin/templates/register.html
+++ b/neo_dolfin/templates/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}">
@@ -60,7 +60,17 @@
                                         </div>
                                         <div class="row mb-3">
                                             <div class="col-md-6">
-                                                <input type="password" name="password" class="form-control" placeholder="Password" required>
+                                                <input type="password" name="password" class="form-control" id="pass" placeholder="Password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{12,20}" 
+                                                title="Your password must contain one digit, one lowercase letter, one uppercase letter, one special character, no space, and it must be at least 8 characters long with a maximum of 16 characters" required>
+                                                <div class="password-tooltip" id="password-tooltip">
+                                                    Your password must contain:<br>
+                                                    - One digit<br>
+                                                    - One lowercase letter<br>
+                                                    - One uppercase letter<br>
+                                                    - One special character<br>
+                                                    - No space<br>
+                                                    - At least 12 characters long with a maximum of 20 characters
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" required>
