--- a/neo_dolfin/templates/register.html
+++ b/neo_dolfin/templates/register.html
@@ -71,6 +71,14 @@
                                                     - No space<br>
                                                     - At least 12 characters long with a maximum of 20 characters
                                                 </div>
+                                                <div id="checkField">
+                                                    <p><b>Password must contain the following:</b></p>
+                                                    <p id="letter" class="wrong">A lowercase letter</p>
+                                                    <p id="capital" class="wrong">A capital letter</p>
+                                                    <p id="number" class="wrong">A number</p>
+                                                    <p id="symbol" class="wrong">A symbol</p>
+                                                    <p id="passwordLength" class="wrong">Between 12 to 20 characters</p>
+                                                </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" required>
