--- a/neo_dolfin/templates/components/navbar.html
+++ b/neo_dolfin/templates/components/navbar.html
@@ -29,6 +29,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">Settings</a></li>
               <li><a class="dropdown-item" href="/profile">My Profile</a></li>
+              <li><a class="dropdown-item" href="/delete_account">Delete My Account</a></li> <!-- Added delete account link -->
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/signout">Sign Out</a></li>
             </ul>
